fix z-index for the popup so it is always on top

--- a/public/style/main.styl
+++ b/public/style/main.styl
@@ -98,6 +98,7 @@ body
 
 #add_word_form
   position: fixed
+  z-index: 9999
   width: 100%
   height: 100%
   background-color:rgba(0,0,0,0.8)
